<resources>
    <string name="app_name">MyCookBook</string>
    <string name="adicionar_receita">Add Recipe</string>
    <string name="categoria">Category:</string>
    <string name="nome_da_receita">Recipe Name</string>
    <string name="insira_ingredientes_aqui">Insert ingredients here!!</string>
    <string name="descricao_da_receita">Description of Recipe</string>
    <string name="porcao">Portion</string>
    <string name="editar">edit</string>
    <string name="deletar">delete</string>
    <string name="modo_de_preparo">How to Do</string>
    <string name="categoria_detalhes">Category:</string>
    <string name="porcao_detalhes">Portion:</string>
    <string name="ingredientes">Ingredients</string>
    <string name="atencao">Attention!!</string>
    <string name="mensagem_permissão_galeria">We need permission to access the galery!!</string>
    <string name="permitir">Allow</string>
    <string name="Negar">Not Allow</string>
    <string name="salvar">Save</string>
    <string name="pesquisar">Search</string>
</resources>